--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="ass2.js"></script>
-     <!-- <script src="conditions.js"></script>
-     <script src="operators.js"></script> -->
 </head>
 <body>
-    
+    <h1>JavaScript</h1>
+    <script src="looping.js"></script>
 </body>
 </html>
