--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <script src="assignment3.js"></script>
+    <script src="arrays.js"></script>
 </body>
 </html>
