--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JavaScript</h1>
+    <!-- <h1>JavaScript</h1> -->
     <script src="async.js"></script>
+</body>
+<body>
+    
+<table>
+    <thead>
+        <th>SI.No</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Company</th>
+    </thead>
+    <tbody id="store">
+
+
+    </tbody>
+</table>
 </body>
 </html>
