--- a/dragdrop.html
+++ b/dragdrop.html
@@ -11,7 +11,11 @@
 <body>
     <div class="container">
         <div id="left">
-            left
+            <div class="items" draggable="true">item1</div>
+            <div class="items" draggable="true">item2</div>
+            <div class="items" draggable="true">item3</div>
+            <div class="items" draggable="true">item4</div>
+
         </div>
         <div id="right">
             right
